# guarding_robot

GuardingRobot-main/: .gitignore  control_node.py  flow chart.odp
GuardingRobot-main/maps/: museum_map.pgm  museum_map.yaml
GuardingRobot-main/src/day_pkg/: package.xml  setup.cfg  setup.py
GuardingRobot-main/src/day_pkg/day_pkg/: cctv1.py  cctv2.py  control_node.py  qr_detector.py  visit_order.py
GuardingRobot-main/src/gui_package/: package.xml  setup.py
GuardingRobot-main/src/gui_package/gui_package/: gui_lifecycle.py
GuardingRobot-main/src/museum_interfaces/: CMakeLists.txt  package.xml
GuardingRobot-main/src/museum_interfaces/srv/: QrRequest.srv  VisitOrder.srv
GuardingRobot-main/src/night_patrol/: package.xml  setup.cfg  setup.py
GuardingRobot-main/src/night_patrol/launch/: night_patrol.launch.py
GuardingRobot-main/src/night_patrol/night_patrol/: control_node2.py  control_node3.py  control_node_lifecycle.py  night_cctv1.py  patrol_nav2.py  patrol_nav2_lifecycle.py  patrol_nav3.py  patrol_nav3_lifecycle.py  way2.yaml
GuardingRobot-main/src/night_pkg/: package.xml  setup.cfg  setup.py
GuardingRobot-main/src/night_pkg/night_pkg/: alarm_system.py  (+7 more)
GuardingRobot-main/src/qr_package/: package.xml  setup.cfg  setup.py
GuardingRobot-main/src/qr_package/qr_package/: qr_database.py  qr_database.sql  qr_detector.py  qr_speak.py
GuardingRobot-main/src/qr_package/qr_package/launch/: qr_start.launch.py
GuardingRobot-main/src/turtlebot4_interfaces/: CMakeLists.txt  package.xml
GuardingRobot-main/src/yolo_tracker_pkg/: package.xml  setup.cfg  setup.py
(+3 files in other folders)
