<?xml version="1.0"?>
<package format="3">
  <name>qr_package</name>
  <version>0.0.0</version>
  <description>QR 코드 감지 및 처리 노드 패키지</description>
  <maintainer email="rokey@todo.todo">rokey</maintainer>
  <license>Apache License 2.0</license>

  <!-- ROS2 Core Dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <!-- Python package dependencies -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-mysql.connector</exec_depend>

  <!-- Test tools -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
